Added multiple photo choice for AI